# SMU-Control-Agilent2900

./: .pre-commit-config.yaml  MIT.LICENSE  README.md  pyproject.toml  testing.ipynb  testing_lib.ipynb
SMUControlAgilent2900/: AgilentB2902A.py  __init__.py  discovery.py  main.py
examples/: testing_lib.ipynb  testing_visa.ipynb
src/: AgilentB2902A.py  main.py
